--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://venkatsp17.github.io/PORTFOLIO",
+  "homepage": "https://viswa21.github.io/dental_2_0/",
   "name": "app",
   "version": "0.1.0",
   "private": true,
